DO328-chapter5.1/deployment-vertx-v3.yaml
apiVersion: apps/v3
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vertx-greet
    version: v3
  name: vertx-greet-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vertx-greet
      version: v3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vertx-greet
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: quay.io/redhattraining/ossm-vertx-greet:1.0
        name: vertx-greet
        ports:
        - containerPort: 8080
        resources: {}
status: {}
