DO328-chapter5.1/service-vertx.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vertx-greet
  name: vertx-greet
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: vertx-greet
status:
  loadBalancer: {}
