DO328-chapter5.1/gateway-vertx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vertx-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
