DO328-chapter5.1/destinationrule-vertx-with-2subsets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule
spec:
  host: vertx-greet
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
