DO328-chapter5.1/virtualservice-vertx-with-2subsets-wieght.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vertx
spec:
  gateways:
  - vertx-gw
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: vertx-greet
        subset: v1
        port:
          number: 8080
      weight: 80
  - route:
    - destination:
        host: vertx-greet
        subset: v2
        port:
          number: 8080
      weight: 20
