DO328-chapter5.1/virtualservice-vertx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vertx
spec:
  hosts:
  - "*"
  gateways:
  - vertx-gw
  http:
  - route:
    - destination:
        host: vertx-greet
        port:
          number: 8080
